--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
 $color-header-footer: #121212;
-$color-background: #e5e5e3;
+$color-background: #efefef;
 $color-brand: #b74e15;
-$color-white: #f2f2f2;
+$color-white: #ffffff;
 $color-sucess: #3e785e;
 $color-error: #a12815;
 $color-input-fields: #cbcbcb;
