--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,27 +1,36 @@
 footer {
-  margin-top: 40px;
-  padding: 30px;
-  background-color: $color-header-footer;
+  @extend .flex-container;
   justify-content: space-between;
-  display: flex;
   align-items: center;
-  flex-wrap: wrap;
   gap: 3rem;
+  margin-top: 40px;
+  padding: 50px 30px;
+  background-color: $color-header-footer;
 
   a {
     color: $color-white;
-    padding-bottom: 10px;
+    padding: 5px 0px;
   }
 
   .footer-contact a {
     display: block;
-    text-decoration: underline;
+
+    &:hover {
+      background: lighten($color: $color-header-footer, $amount: 25);
+      transform: scale(1.1);
+    }
   }
 
   .fa-facebook-f,
   .fa-instagram,
   .fa-snapchat-ghost {
     font-size: 1.7em;
-    margin-right: 20px;
+    margin-right: 10px;
+    padding: 8px;
+
+    &:hover {
+      background: lighten($color: $color-header-footer, $amount: 25);
+      transform: scale(1.1);
+    }
   }
 }
