--- a/sass/partials/_product-details.scss
+++ b/sass/partials/_product-details.scss
@@ -1,33 +1,23 @@
 .detail-container {
-  margin: 30px;
+  @extend .flex-container;
+  gap: 3rem;
+  margin: 100px 30px 30px 30px;
 
-  img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    margin: 30px 30px 0px 0px;
-  }
-
-  .detail-img-container {
-    text-align: center;
+  .details-information {
+    max-width: 500px;
   }
 
   p {
     font-size: 0.5em;
   }
 
-  @media (min-width: $tablet-min-width) {
-    img {
-      width: 450px;
-      height: 450px;
-    }
+  img {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
   }
 
-  @media (min-width: $computer-min-width) {
-    max-width: 1000px;
-    margin: 70px auto;
-    display: flex;
-
+  @media (min-width: $tablet-min-width) {
     img {
       width: 500px;
       height: 500px;
