--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -1,25 +1,8 @@
 .product-page-container {
-  max-width: 1600px;
-  margin: auto;
+  @include max-width(1600px);
 
   .product-page-text {
     margin: 10px;
-  }
-
-  .search-container {
-    display: flex;
-    flex-direction: column;
-  }
-
-  // Kanskje bruke input fra forms - hvis det går ann å exportere den og importere her.
-  .search {
-    height: 40px;
-    font-size: 0.8em;
-    width: 100%;
-    border-radius: 5px;
-    padding: 5px -10px 5px 10px;
-    background-color: $color-background;
-    border: none;
   }
 
   .product-heading-container {
@@ -29,9 +12,7 @@
   }
 
   .product-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    @extend .flex-container;
   }
 }
 
@@ -50,7 +31,7 @@
   }
 
   img {
-    width: 100%;
+    width: 300px;
     height: 300px;
     object-fit: cover;
   }
@@ -58,4 +39,12 @@
   &:hover {
     transform: scale(1.02);
   }
+}
+
+.search {
+  height: 60px;
+  width: 100%;
+  background-color: $color-background;
+  border: none;
+  font-size: 1.3em;
 }
