--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import "partials/typography";
 @import "partials/buttons";
 @import "partials/base";
+@import "partials/navigation";
 @import "partials/heading";
 @import "partials/footer";
 @import "partials/form";
