--- a/sass/partials/_cart.scss
+++ b/sass/partials/_cart.scss
@@ -1,5 +1,5 @@
 .cart-container {
-  background-color: $color-background;
+  background-color: $color-white;
   padding: 15px;
 
   @media (min-width: $tablet-min-width) {
