--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -1,4 +1,8 @@
 .about-container {
+  background-color: $color-white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 6px 6px 6px $color-input-fields;
   .about-content {
     margin: 30px;
   }
