--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -1,6 +1,6 @@
 form {
   margin: 20px;
-  background-color: $color-background;
+  background-color: $color-white;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 6px 6px 6px $color-input-fields;
@@ -37,7 +37,7 @@ form {
   }
 
   .upload-image {
-    background-color: $color-background;
+    background-color: $color-white;
     margin-bottom: 30px;
   }
 
