--- a/sass/partials/_product-details.scss
+++ b/sass/partials/_product-details.scss
@@ -2,6 +2,10 @@
   @extend .flex-container;
   gap: 3rem;
   margin: 100px 30px 30px 30px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 6px 6px 6px $color-input-fields;
 
   .details-information {
     max-width: 500px;
