--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -44,7 +44,7 @@
 .search {
   height: 60px;
   width: 100%;
-  background-color: $color-background;
+  background-color: $color-white;
   border: none;
   font-size: 1.3em;
 }
