--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
           flex: 1 0 auto;
 }
 
-.flex-container, footer, .home-featured .featured-container, .product-page-container .product-container, .detail-container {
+.flex-container, footer, .home-featured .featured-container, .product-page-container .product-container, .product-details-container .detail-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -379,8 +379,14 @@ form {
 @media (min-width: 650px) {
   form {
     max-width: 400px;
-    margin: 30px auto;
+    margin: auto;
     padding: 50px;
+  }
+}
+
+@media (min-width: 650px) and (min-width: 650px) {
+  form {
+    margin: 40px auto;
   }
 }
 
@@ -483,7 +489,13 @@ form .checkbox-container input {
 @media (min-width: 650px) {
   .about-container {
     max-width: 700px;
-    margin: 30px auto;
+    margin: auto;
+  }
+}
+
+@media (min-width: 650px) and (min-width: 650px) {
+  .about-container {
+    margin: 40px auto;
   }
 }
 
@@ -563,12 +575,22 @@ form .checkbox-container input {
   .home-all-sneakers,
   .home-about {
     max-width: 800px;
-    margin: 30px auto;
+    margin: auto;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
   }
+}
+
+@media (min-width: 900px) and (min-width: 650px) {
+  .home-all-sneakers,
+  .home-about {
+    margin: 40px auto;
+  }
+}
+
+@media (min-width: 900px) {
   .home-all-sneakers .home-all-sneakers-text,
   .home-about .home-all-sneakers-text {
     -ms-flex-preferred-size: 140%;
@@ -585,7 +607,13 @@ form .checkbox-container input {
 
 .product-page-container {
   max-width: 1600px;
-  margin: 30px auto;
+  margin: auto;
+}
+
+@media (min-width: 650px) {
+  .product-page-container {
+    margin: 40px auto;
+  }
 }
 
 .product-page-container .product-page-text {
@@ -641,25 +669,40 @@ form .checkbox-container input {
   font-size: 1.3em;
 }
 
-.detail-container {
+.product-details-container {
+  margin: 20px;
+}
+
+.product-details-container .detail-container {
   gap: 3rem;
-  margin: 100px 30px 30px 30px;
   background-color: white;
-  padding: 20px;
   border-radius: 5px;
   -webkit-box-shadow: 6px 6px 6px #cbcbcb;
           box-shadow: 6px 6px 6px #cbcbcb;
 }
 
-.detail-container .details-information {
+@media (min-width: 650px) {
+  .product-details-container .detail-container {
+    max-width: 1100px;
+    margin: auto;
+  }
+}
+
+@media (min-width: 650px) and (min-width: 650px) {
+  .product-details-container .detail-container {
+    margin: 40px auto;
+  }
+}
+
+.product-details-container .details-information {
   max-width: 500px;
 }
 
-.detail-container p {
+.product-details-container p {
   font-size: 0.5em;
 }
 
-.detail-container img {
+.product-details-container img {
   width: 250px;
   height: 250px;
   -o-object-fit: cover;
@@ -667,7 +710,7 @@ form .checkbox-container input {
 }
 
 @media (min-width: 650px) {
-  .detail-container img {
+  .product-details-container img {
     width: 500px;
     height: 500px;
   }
@@ -681,7 +724,13 @@ form .checkbox-container input {
 @media (min-width: 650px) {
   .cart-container {
     max-width: 600px;
-    margin: 30px auto;
+    margin: auto;
+  }
+}
+
+@media (min-width: 650px) and (min-width: 650px) {
+  .cart-container {
+    margin: 40px auto;
   }
 }
 
