--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -31,7 +31,11 @@ a {
 
 @mixin max-width($width) {
   max-width: $width;
-  margin: 30px auto;
+  margin: auto;
+
+  @media (min-width: $tablet-min-width) {
+    margin: 40px auto;
+  }
 }
 
 .fa-circle {
