--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -5,11 +5,11 @@
     margin: 10px;
   }
 
-  .product-heading-container {
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-  }
+  // .product-heading-container {
+  //   justify-content: center;
+  //   display: flex;
+  //   flex-direction: column;
+  // }
 
   .product-container {
     @extend .flex-container;
