--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -3,6 +3,8 @@
   padding: 10px;
   border-radius: 5px;
   box-shadow: 6px 6px 6px $color-input-fields;
+  margin: 20px;
+
   .about-content {
     margin: 30px;
   }
