--- a/css/style.css
+++ b/css/style.css
@@ -404,6 +404,7 @@ form textarea {
   border: none;
   margin-bottom: 30px;
   font-family: "IBM Plex Sans Thai Looped", sans-serif;
+  padding: 0px;
 }
 
 @media (min-width: 650px) {
@@ -468,7 +469,7 @@ form .checkbox-container input {
   border-radius: 5px;
   -webkit-box-shadow: 6px 6px 6px #cbcbcb;
           box-shadow: 6px 6px 6px #cbcbcb;
-  margin: 20px;
+  margin: 10px;
 }
 
 .about-container .about-content {
