--- a/css/style.css
+++ b/css/style.css
@@ -675,6 +675,7 @@ form .checkbox-container input {
   border-radius: 5px;
   -webkit-box-shadow: 6px 6px 6px #cbcbcb;
           box-shadow: 6px 6px 6px #cbcbcb;
+  padding: 10px;
 }
 
 @media (min-width: 650px) {
