--- a/sass/partials/_product-details.scss
+++ b/sass/partials/_product-details.scss
@@ -7,6 +7,7 @@
     background-color: white;
     border-radius: 5px;
     box-shadow: 6px 6px 6px $color-input-fields;
+    padding: 10px;
 
     @media (min-width: $tablet-min-width) {
       @include max-width(1100px);
