--- a/sass/partials/_index.scss
+++ b/sass/partials/_index.scss
@@ -12,7 +12,7 @@
 }
 
 .home-featured {
-  background-color: $color-white;
+  background-color: $color-background;
   padding: 10px 20px 60px 20px;
   margin: -110px 20px 100px 20px;
   box-shadow: 6px 6px 6px $color-input-fields;
