--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,7 @@ form .upload-image {
 
 form input::-webkit-file-upload-button {
   border-radius: 5px;
+  height: 50px;
   padding: 10px;
   border: 1px solid #121212;
   cursor: pointer;
@@ -524,7 +525,7 @@ form .checkbox-container input {
 }
 
 .home-featured {
-  background-color: #ffffff;
+  background-color: #efefef;
   padding: 10px 20px 60px 20px;
   margin: -110px 20px 100px 20px;
   -webkit-box-shadow: 6px 6px 6px #cbcbcb;
