--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -20,6 +20,7 @@
   margin: 10px;
   background-color: $color-white;
   box-shadow: 6px 6px 6px $color-input-fields;
+  padding: 10px;
 
   h2 {
     font-size: 1.1em;
