--- a/sass/partials/_products.scss
+++ b/sass/partials/_products.scss
@@ -1,15 +1,9 @@
 .product-page-container {
-  @include max-width(1600px);
+  @include max-width(1800px);
 
   .product-page-text {
     margin: 10px;
   }
-
-  // .product-heading-container {
-  //   justify-content: center;
-  //   display: flex;
-  //   flex-direction: column;
-  // }
 
   .product-container {
     @extend .flex-container;
@@ -35,6 +29,11 @@
     width: 300px;
     height: 300px;
     object-fit: cover;
+
+    @media (min-width: $computer-min-width) {
+      height: 380px;
+      width: 380px;
+    }
   }
 
   &:hover {
