--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,7 @@ img {
 .menu li a {
   padding: 5px;
   font-size: 1em;
+  border-radius: 2px;
 }
 
 .menu li a i {
@@ -343,6 +344,7 @@ footer a {
 
 footer .footer-contact a {
   display: block;
+  border-radius: 2px;
 }
 
 footer .footer-contact a:hover {
@@ -357,6 +359,7 @@ footer .fa-snapchat-ghost {
   font-size: 1.7em;
   margin-right: 10px;
   padding: 8px;
+  border-radius: 2px;
 }
 
 footer .fa-facebook-f:hover,
