--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -14,6 +14,7 @@ footer {
 
   .footer-contact a {
     display: block;
+    border-radius: 2px;
 
     &:hover {
       background: lighten($color: $color-header-footer, $amount: 25);
@@ -27,6 +28,7 @@ footer {
     font-size: 1.7em;
     margin-right: 10px;
     padding: 8px;
+    border-radius: 2px;
 
     &:hover {
       background: lighten($color: $color-header-footer, $amount: 25);
